--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "crypto": "^1.0.1",
     "express": "^4.13.4",
     "fs": "0.0.1-security",
+    "mkdirp": "^1.0.4",
     "mongoose": "^4.13.21",
     "multer": "^1.4.2",
     "path": "^0.12.7"
